added artefacts distribution endpoint
